Fix sidebar and main alignment

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,18 @@ body {
   height: 100%;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+:root {
+  --sidebar-width: 300px;
+  --sidebar-gap: 25px;
+  --sidebar-total: calc(var(--sidebar-width) + (var(--sidebar-gap) * 2));
+}
+
 body {
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
@@ -45,4 +57,5 @@ h3 {
 .total {
   margin: 0 auto 0 auto;
   max-width: 1300px;
+  position: relative;
 }
