--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,12 +1,12 @@
 #main {
-  padding-left: 25px;
-  padding-right: 25px;
   padding-top: 25px;
+  padding-right: 25px;
   padding-bottom: 10px;
+  padding-left: 25px;
 }
 
 #main-in {
-  padding-left: 300px;
+  padding-left: var(--sidebar-total);
 }
 
 #main p {
@@ -25,14 +25,14 @@
 
 #global-head {
   position: fixed;
-  font-size: 14px;
-  color: rgb(50, 50, 50);
-  width: 300px;
+  top: 0;
+  width: var(--sidebar-width);
   text-align: left;
   padding-top: 60px;
   padding-left: 80px;
   padding-right: 30px;
   z-index: 100;
+  color: rgb(50, 50, 50);
 }
 
 #global-head p {
@@ -42,25 +42,132 @@
 }
 
 #sidebar {
-  margin: 25px;
-  font-size: 15px;
+  position: fixed;
+  top: 0;
+  width: var(--sidebar-width);
+  height: 100%;
+  margin: var(--sidebar-gap);
   padding-top: 240px;
   padding-left: 55px;
-  width: 300px;
-  height: 100%;
-  position: fixed;
   background: #fff;
   text-align: left;
+  font-size: 15px;
 }
 
 #overlay {
   display: none;
   position: fixed;
-  background: rgba(0,0,0,.6);
+  background: rgba(0, 0, 0, .6);
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+}
+
+@media screen and (max-width: 1150px) {
+  #main {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+  }
+
+  #global-head {
+    padding-top: 40px;
+    padding-left: 60px;
+    padding-right: 30px;
+  }
+
+  #sidebar {
+    margin: 10px;
+    padding-top: 240px;
+    padding-left: 50px;
+  }
+
+  :root {
+    --sidebar-gap: 10px;
+    --sidebar-total: calc(var(--sidebar-width) + (var(--sidebar-gap) * 2));
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  #main {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+  }
+
+  #global-head {
+    padding-top: 20px;
+    padding-left: 40px;
+    padding-right: 20px;
+  }
+
+  #sidebar {
+    margin: 0;
+    padding-top: 220px;
+    padding-left: 40px;
+  }
+
+  :root {
+    --sidebar-gap: 0px;
+    --sidebar-total: calc(var(--sidebar-width) + (var(--sidebar-gap) * 2));
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #main {
+    padding-top: 160px;
+  }
+
+  #main-in {
+    padding-left: 0;
+  }
+
+  #main section {
+    padding: 25px 25px 25px 25px;
+  }
+
+  #global-head {
+    width: 100%;
+    padding: 25px;
+    background: rgba(255, 255, 255);
+    line-height: 10px;
+  }
+
+  #global-head p {
+    color: rgb(85, 85, 85);
+    font-size: 12px;
+  }
+
+  #sidebar {
+    position: fixed;
+    top: 0;
+    right: -300px;
+    width: 270px;
+    height: 100%;
+    margin: 0;
+    padding-top: 100px;
+    padding-left: 40px;
+    background: #fff;
+    color: #333;
+    transition: .35s ease-in-out;
+  }
+
+  #overlay {
+    z-index: 200;
+  }
+
+  #sidebar {
+    z-index: 300;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #sidebar {
+    right: -200px;
+    width: 200px;
+    padding-top: 60px;
+  }
 }
